This change introduces major updates to the App Engine Java SDK, including: - Support for Jetty 12.1 and Jakarta EE 11 via a new `java25` runtime option. - A major version bump to `3.0.0` due to compilation target changes and API refactoring. - Refactoring of generic Jakarta EE API packages from `ee10` to `jakarta`.
**Release 3.0.0**
The project version is bumped to `3.0.0-SNAPSHOT`, and the base compilation target is raised from Java 8 to Java 17. This major version increment reflects breaking API package changes and the new baseline Java version.

**Jetty 12.1 and Jakarta EE 11 Support**
- Adds build configurations, SDK classes (`Jetty121EE8Sdk`, `Jetty121EE11Sdk`), and runtime handlers (`EE11AppVersionHandlerFactory`) to support Jetty 12.1 with both EE8 and EE11 applications.
- Introduces a new `java25` runtime option in `appengine-web.xml`, which defaults to using Jetty 12.1 with EE11 support.
- Jetty 12.0 continues to support EE8 and EE10 for `java17` and `java21` runtimes.

**API Refactoring: `ee10` to `jakarta`**
To better reflect that common servlet APIs are part of Jakarta EE rather than a specific version like EE10, packages named `ee10` have been refactored. The existing `ee10` classes are now deprecated with `@Deprecated(since = "3.0.0")` and point to their replacements in new `jakarta` packages via `{@link}` tags in Javadoc.

This includes:
- `com.google.appengine.api.blobstore.ee10.*` -> `c.g.a.api.blobstore.jakarta.*`
- `com.google.appengine.api.mail.ee10.*` -> `c.g.a.api.mail.jakarta.*`
- `com.google.appengine.api.taskqueue.ee10.*` -> `c.g.a.api.taskqueue.jakarta.*`
- `com.google.appengine.api.utils.ee10.*` -> `c.g.a.api.utils.jakarta.*`
- `c.g.apphosting.utils.remoteapi.EE10RemoteApiServlet` -> `c.g.apphosting.utils.remoteapi.JakartaRemoteApiServlet`
- `c.g.apphosting.utils.servlet.ee10.*` -> `c.g.apphosting.utils.servlet.jakarta.*`

**Breaking Change:**
Applications using classes from the `ee10` packages listed above must update their imports to us