@@ -15,9 +15,11 @@
  */
 package com.google.appengine.tools.development;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_HOME;
 import static com.google.common.truth.Truth.assertThat;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
+import com.google.apphosting.testing.PortPicker;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.net.HostAndPort;
@@ -26,12 +28,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.UncheckedIOException;
 import java.net.InetSocketAddress;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.CountDownLatch;
-import java.util.stream.Stream;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.config.RequestConfig;
@@ -39,17 +40,67 @@ import org.apache.http.client.methods.HttpGet;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.http.util.EntityUtils;
 import org.junit.After;
-import org.junit.Test;
+import org.junit.runners.Parameterized;
 
 public abstract class DevAppServerTestBase {
-  private int jettyPort;
+  int jettyPort;
   private Process runtimeProc;
   private CountDownLatch serverStarted;
 
-  private static final int NUMBER_OF_RETRIES = 5;
+  static final int NUMBER_OF_RETRIES = 5;
 
-  private static HttpClient httpClient;
-  private static final int RESPONSE_200 = 200;
+  static HttpClient httpClient;
+  static final int RESPONSE_200 = 200;
+  private static final String TOOLS_JAR =
+      getSdkRoot().getAbsolutePath() + "/lib/appengine-tools-api.jar";
+
+  @Parameterized.Parameters
+  public static List<Object[]> version() {
+    return Arrays.asList(
+        new Object[][] {
+          {"java17", "9.4", "EE6"},
+          {"java17", "12.0", "EE8"},
+          {"java17", "12.0", "EE10"},
+          {"java17", "12.1", "EE11"},
+          {"java21", "12.0", "EE8"},
+          {"java21", "12.0", "EE10"},
+          {"java21", "12.1", "EE11"},
+          {"java25", "12.1", "EE8"},
+          {"java25", "12.1", "EE11"}
+        });
+  }
+
+  public DevAppServerTestBase(String runtimeVersion, String jettyVersion, String jakartaVersion) {
+    switch (jakartaVersion) {
+      case "EE6":
+        System.setProperty("appengine.use.EE8", "false");
+        System.setProperty("appengine.use.EE10", "false");
+        System.setProperty("appengine.use.EE11", "false");
+        break;
+      case "EE8":
+        System.setProperty("appengine.use.EE8", "true");
+        System.setProperty("appengine.use.EE10", "false");
+        System.setProperty("appengine.use.EE11", "false");
+        break;
+      case "EE10":
+        System.setProperty("appengine.use.EE8", "false");
+        System.setProperty("appengine.use.EE10", "true");
+        System.setProperty("appengine.use.EE11", "false");
+        break;
+      case "EE11":
+        System.setProperty("appengine.use.EE8", "false");
+        System.setProperty("appengine.use.EE10", "false");
+        System.setProperty("appengine.use.EE11", "true");
+        break;
+      default:
+        // fall through
+    }
+    if (jettyVersion.equals("12.1")) {
+      System.setProperty("appengine.use.jetty121", "true");
+    } else {
+      System.setProperty("appengine.use.jetty121", "false");
+    }
+  }
 
   static File createApp(String directoryName) {
     File currentDirectory = new File("").getAbsoluteFile();
@@ -68,6 +119,37 @@ public abstract class DevAppServerTestBase {
   static File getSdkRoot() {
     File currentDirectory = new File("").getAbsoluteFile();
     return new File(currentDirectory, "../../sdk_assembly/target/appengine-java-sdk");
+  }
+
+  public void setUpClass(File appDir) throws IOException, InterruptedException {
+    PortPicker portPicker = PortPicker.create();
+    int jettyPort = portPicker.pickUnusedPort();
+
+    ArrayList<String> runtimeArgs = new ArrayList<>();
+    runtimeArgs.add(JAVA_HOME.value() + "/bin/java");
+    runtimeArgs.add("-Dappengine.sdk.root=" + getSdkRoot());
+    // Java17 or later need more flags:
+    runtimeArgs.add("--add-opens");
+    runtimeArgs.add("java.base/java.net=ALL-UNNAMED");
+    runtimeArgs.add("--add-opens");
+    runtimeArgs.add("java.base/sun.net.www.protocol.http=ALL-UNNAMED");
+    runtimeArgs.add("--add-opens");
+    runtimeArgs.add("java.base/sun.net.www.protocol.https=ALL-UNNAMED");
+
+    runtimeArgs.add("-Dappengine.use.EE8=" + System.getProperty("appengine.use.EE8"));
+    runtimeArgs.add("-Dappengine.use.EE10=" + System.getProperty("appengine.use.EE10"));
+    runtimeArgs.add("-Dappengine.use.EE11=" + System.getProperty("appengine.use.EE11"));
+    runtimeArgs.add("-Dappengine.use.jetty121=" + System.getProperty("appengine.use.jetty121"));
+    runtimeArgs.add("-cp");
+    runtimeArgs.add(TOOLS_JAR);
+    runtimeArgs.add("com.google.appengine.tools.development.DevAppServerMain");
+    runtimeArgs.add("--address=" + new InetSocketAddress(jettyPort).getHostString());
+    runtimeArgs.add("--port=" + jettyPort);
+    runtimeArgs.add("--allow_remote_shutdown"); // Keep as used in Maven plugin
+    runtimeArgs.add("--disable_update_check"); // Keep, as used in Maven plugin
+
+    runtimeArgs.add(appDir.toString());
+    createRuntime(ImmutableList.copyOf(runtimeArgs), ImmutableMap.of(), jettyPort);
   }
 
   void createRuntime(
@@ -93,53 +175,6 @@ public abstract class DevAppServerTestBase {
     runtimeProc.destroy();
   }
 
-  @Test
-  public void useMemcache() throws Exception {
-    // App Engine Memcache access.
-    executeHttpGet(
-        "/?memcache_loops=10&memcache_size=10",
-        "Running memcache for 10 loops with value size 10\n"
-            + "Cache hits: 10\n"
-            + "Cache misses: 0\n",
-        RESPONSE_200);
-
-    executeHttpGet(
-        "/?memcache_loops=10&memcache_size=10",
-        "Running memcache for 10 loops with value size 10\n"
-            + "Cache hits: 20\n"
-            + "Cache misses: 0\n",
-        RESPONSE_200);
-
-    executeHttpGet(
-        "/?memcache_loops=5&memcache_size=10",
-        "Running memcache for 5 loops with value size 10\n"
-            + "Cache hits: 25\n"
-            + "Cache misses: 0\n",
-        RESPONSE_200);
-  }
-
-  @Test
-  public void useUserApi() throws Exception {
-    // App Engine User API access.
-    executeHttpGet("/?user", "Sign in with /_ah/login?continue=%2F\n", RESPONSE_200);
-  }
-
-  @Test
-  public void useDatastoreAndTaskQueue() throws Exception {
-    // First, populate Datastore entities
-    executeHttpGet("/?datastore_entities=3", "Added 3 entities\n", RESPONSE_200);
-
-    // App Engine Taskqueue usage, queuing the addition of 7 entities.
-    executeHttpGet(
-        "/?add_tasks=1&task_url=/?datastore_entities=7",
-        "Adding 1 tasks for URL /?datastore_entities=7\n",
-        RESPONSE_200);
-
-    // After a while, we should have 10 or more entities.
-    executeHttpGetWithRetriesContains(
-        "/?datastore_count", "Found ", RESPONSE_200, NUMBER_OF_RETRIES);
-  }
-
   private Process launchRuntime(
       ImmutableList<String> args, ImmutableMap<String, String> extraEnvironmentEntries)
       throws IOException, InterruptedException {
@@ -155,13 +190,13 @@ public abstract class DevAppServerTestBase {
     return process;
   }
 
-  private void executeHttpGet(String url, String expectedResponseBody, int expectedReturnCode)
+  void executeHttpGet(String url, String expectedResponseBody, int expectedReturnCode)
       throws Exception {
     executeHttpGetWithRetries(
         url, expectedResponseBody, expectedReturnCode, /* numberOfRetries= */ 1);
   }
 
-  private void executeHttpGetWithRetries(
+  void executeHttpGetWithRetries(
       String url, String expectedResponse, int expectedReturnCode, int numberOfRetries)
       throws Exception {
     HttpGet get =
@@ -185,7 +220,7 @@ public abstract class DevAppServerTestBase {
     assertThat(retCode).isEqualTo(expectedReturnCode);
   }
 
-  private void executeHttpGetWithRetriesContains(
+  void executeHttpGetWithRetriesContains(
       String url, String expectedResponse, int expectedReturnCode, int numberOfRetries)
       throws Exception {
     HttpGet get =
@@ -228,36 +263,10 @@ public abstract class DevAppServerTestBase {
             serverStarted.countDown();
           }
         }
-      } catch (IOException e) {
-        throw new RuntimeException(e);
+      } catch (IOException ignored) {
+        // ignored
       }
     }
   }
 
-  private static void copyTree(Path fromRoot, Path toRoot) throws IOException {
-    try (Stream<Path> stream = Files.walk(fromRoot)) {
-      stream.forEach(
-          fromPath -> {
-            try {
-              copyFile(fromRoot, fromPath, toRoot);
-            } catch (IOException e) {
-              throw new UncheckedIOException(e);
-            }
-          });
-    } catch (UncheckedIOException e) {
-      throw new IOException(e);
-    }
-  }
-
-  private static void copyFile(Path fromRoot, Path fromPath, Path toRoot) throws IOException {
-    if (!Files.isDirectory(fromPath)) {
-      Path relative = fromRoot.relativize(fromPath);
-      if (relative.getParent() != null) {
-        Path toDir = toRoot.resolve(relative.getParent());
-        Files.createDirectories(toDir);
-        Path toPath = toRoot.resolve(relative);
-        Files.copy(fromPath, toPath);
-      }
-    }
-  }
 }
